Added a testing feature to the util crate.

--- a/game-tree/Cargo.toml
+++ b/game-tree/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 rand = "0.8"
 util = { path = "../util" }
+
+[dev-dependencies.util]
+path = "../util"
+features = ["testing"]
